--- a/index.html
+++ b/index.html
@@ -5,8 +5,6 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/95/three.min.js"></script>
-    <script src="/three.orbit.js"></script>
     <!-- import the webpage's stylesheet -->
     <link rel="stylesheet" href="/style.css">
     
@@ -14,6 +12,6 @@
     <script src="/script.js" defer></script>
   </head>  
   <body>
-    
+    <canvas></canvas>
   </body>
 </html>
